logs/neuralrg_32_4layers32928584.log
Traceback (most recent call last):
  File "./main.py", line 7, in <module>
    import train
  File "/cluster/home/hhuang05/NeuralRG/train/__init__.py", line 1, in <module>
    from .learn import symmetryMERAInit,learn, learnInterface
  File "/cluster/home/hhuang05/NeuralRG/train/learn.py", line 50
    def symmetryMERAInit(L,d,nlayers,nmlp,nhidden,nrepeat,symmetryList,device,dtype,name = None, channel = 1, depthMERA = Noneclass HaarRNVP(flow.Flow):
                                                                                                                                    ^
SyntaxError: invalid syntax
